--- a/CSS/halaman.css
+++ b/CSS/halaman.css
@@ -1,7 +1,11 @@
 body{
     background: linear-gradient(lightpink 0%,rgb(156, 82, 93) 40%, rgb(83, 38, 45)100%);
 }
-
+.demo
+	%h2 Default
+	.scrollbar
+		.fake-content
+		
 .profil{
     display: flex;
     justify-content: center;
